--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Cliente de Mastodon"
     />
-    <title>React App</title>
+    <title>Punto y Contrapunto</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
